--- a/css/styles.css
+++ b/css/styles.css
@@ -771,8 +771,12 @@ img {
   background-color: var(--accent-color);
 }
 
+.form-footer-mein{
+  display: flex;
+}
+
 .form-mail {
-  display: inline-block;
+  display: block;
   width: 385px;
   height: 50px;
   padding: 15px 16px;
@@ -853,7 +857,7 @@ img {
   min-height: 581px;
   text-align: center;
   background-color: var(--white-color);
-
+padding: 40px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -863,7 +867,8 @@ img {
   right: 0;
   margin: 8px 8px;
   top: 0;
-
+  background-color: none;
+  border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 30px;
@@ -873,6 +878,9 @@ img {
   color: var(--black-color);
 }
 .close-icon {
+  position: absolute;
+  right: 0;
+  top: 0;
   width: 30px;
   height: 30px;
   fill: currentColor;
@@ -881,11 +889,7 @@ img {
 .button-modal:hover {
   color: var(--accent-color);
 }
-/* Форма */
-.form-modal {
-  padding-left: 40px;
-  padding-right: 40px;
-}
+
 .main-form {
   text-align: center;
   font-weight: 700;
@@ -893,7 +897,7 @@ img {
   line-height: 1.15;
   color: var(--title-text-color);
   margin-bottom: 28px;
-  margin-top: 40px;
+  margin-top: 0;
 }
 
 .form-feild {
@@ -902,12 +906,9 @@ img {
   margin-top: 0;
   color: var(--title-text-color);
 }
-/* .form-input:focus ~ .{
-  background-color: #188ce8;
-} */
+
 .form-textarea {
   position: relative;
-  margin-bottom: 20px;
   margin-top: 0;
 }
 .form-input {
@@ -923,7 +924,7 @@ img {
 .form-input:focus {
   border-color: var(--accent-color);
 }
-.form-input:focus ~ .form-icon {
+.form-input:focus ~ .icon {
   color: var(--accent-color);
 }
 input {
@@ -936,13 +937,12 @@ input {
 textarea {
   outline: none;
 }
-.form-icon {
+
+.icon {
   position: absolute;
   left: 15px;
   top: 10px;
   height: 14px;
-}
-.icon {
   width: 18px;
   height: 18px;
   fill: currentColor;
