--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ img {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-/* Соціальні мережі */
+/* Соціальні мереж */
 .social {
   display: flex;
   margin-top: 30px;
